# crowd-evacuation

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_env.sh  test_env.py
anylogic/: .gitignore  README.md  run_and_export.py  trajectory_exporter.py
configs/: ablation_configs.yaml  default.yaml  large_station_config.yaml  multi_scale_validation.yaml  optimized_config.yaml  trajectron_config.yaml
docs/: ablation_usage_guide.md  density_prediction_analysis.md  enhanced_pedestrian_behavior.md  hierarchical_guidance_system.md  neural_trajectory_prediction.md  new_station_plan.md  pipeline_guide.md  scale_migration_guide.md
examples/: demo_sfm.py  evaluate_with_unified_reward.py  plot_large_station_layout.py  pygame_metro_only_ppo.py  pygame_metro_station.py  pygame_metro_with_ppo.py  pygame_visualizer.py  quick_validate.py  quick_validate_hard.py  run_ablation.py  run_framework_comparison.py  run_multi_scale_validation.py  train_gbm.py  train_gbm_behavior.py  train_ppo.py  train_ppo_large_station.py  train_ppo_metro.py  train_trajectory.py  train_trajectron.py  visualize_evacuation.py
outputs/ablation/: ablation_analysis_report_20260128.md
outputs/models/: density_predictor.json  (+5 more)
scripts/: baseline_test.py  download_data.py  download_evacuation_datasets.py  prediction_test.py  routing_test.py  run_ablation.sh  run_full_pipeline.py  run_generalization_test.py  run_optimization_pipeline.sh  test_optimized_gpu_sfm.py  train_density_predictor.py  visualize_density_map.py  visualize_density_prediction.py  visualize_pedestrian_flow.py
src/: __init__.py
(+210 files in other folders)
